--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@sweetalert2/ngx-sweetalert2": "^12.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.3",
     "tailwindcss": "^3.3.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
